kafka-cluster/cluster-without-oauth/connect/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: connect-virtualservice
  namespace: kafka-cluster
spec:
  hosts:
    - kafka-connect.local.io
  gateways:
    - connect-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: strimzi-connect-connect-api.kafka-cluster.svc.cluster.local
            port:
              number: 8083
